# ai-requirement-alignment-checker

./: .env.example  .gitignore  README.md  TODO.md  docker-compose.yml  pnpm-lock.yaml  render.yaml  test_req.py
apps/api/: pyproject.toml  test.py  test_script.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_integration_layer.py  0003_alignment_fields.py  0004_reporting_layer.py  bf263c408395_remove_project_status.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/core/: config.py  database.py  security.py
apps/api/app/models/: __init__.py  alignment_result.py  base.py  client_approval.py  code_artifact.py  jira_story.py  mismatch_report.py  notification.py  project.py  pull_request.py  requirement.py  requirement_version.py  user.py
apps/api/tests/: test_reporting_service.py
apps/django_api/: build.sh  check_artifacts.py  cleanup_demo_projects.py  fix_summaries.py  fix_users_table.py  migration_helper.py  pyproject.toml  requirements.txt  test_api_creation.py  test_serializer.py  test_upload.py
apps/django_api/alignment/: models.py  serializers.py  services.py  urls.py  views.py
apps/django_api/authentication/: admin.py  backends.py  models.py  serializers.py  urls.py  views.py
apps/django_api/core/: settings.py  urls.py  views.py
apps/django_api/integrations/: models.py  serializers.py  services.py  urls.py  views.py
apps/django_api/projects/: models.py  serializers.py  services.py  urls.py  views.py
apps/django_api/reporting/: models.py  serializers.py  services.py  urls.py  views.py
(+87 files in other folders)
