[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "chromadb>=1.5.9",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "groq>=1.4.0",
    "jira>=3.10.5",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pygithub>=2.9.1",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
