[project]
name = "django-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "chromadb>=1.5.9",
    "django>=5.2.15",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "groq>=1.4.0",
    "jira>=3.10.5",
    "psycopg[binary]>=3.3.4",
    "pygithub>=2.9.1",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
]
